--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MooneyGO</title>
+	<title>MooneyGo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -15,12 +15,14 @@
 		<div class="corner"></div>
 		<div class="corner"></div>
 		<div class="corner"></div>
+
 		<!-- Divs -->
 		<div class="div2">
 			<div class="div3">
 				Prova
 			</div>
 		</div>
+		
 	</div>
 
 	<!-- Scripts -->
