--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>MooneyGo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/x-icon" href="/favicon.png">
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -22,7 +23,7 @@
 				Prova
 			</div>
 		</div>
-		
+
 	</div>
 
 	<!-- Scripts -->
