--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 	<script src="script.js"></script>
 	<!-- Add to homescreen -->
 	<script src="./add_to_homescreen/addtohomescreen.js"></script>
+	<script>
+		addToHomescreen();
+	</script>
 
 </body>
 </html>
