--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<meta name="msapplication-TileImage" content="./icons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<!-- Add to homescreen -->
-	<link rel="stylesheet" type="text/css" href="./add_to_homescreen/addtohomescreen.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./add_to_homescreen/addtohomescreen.css"> -->
 </head>
 <body>
 
@@ -51,9 +51,9 @@
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script src="script.js"></script>
 	<!-- Add to homescreen -->
-	<script src="./add_to_homescreen/addtohomescreen.js"></script>
+	<!-- <script src="./add_to_homescreen/addtohomescreen.js"></script> -->
 	<script>
-		addToHomescreen();
+		// addToHomescreen();
 	</script>
 
 </body>
