--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="./icons/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
 	<!-- Manifest file -->
-	<link rel="manifest" href="icons/manifest.json">
+	<link rel="manifest" href="manifest.json">
 	<!-- Website & PWA Colors -->
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="./icons/ms-icon-144x144.png">
@@ -30,20 +30,19 @@
 </head>
 <body>
 
-	<div class="div1">
-		
-		<!-- Corners -->
+	<!-- <div class="div1">
 		<div class="corner"></div>
 		<div class="corner"></div>
 		<div class="corner"></div>
 		<div class="corner"></div>
-
-		<!-- Divs -->
 		<div class="div2">
 			<div class="div3">
 				Prova
 			</div>
 		</div>
+	</div> -->
+
+	<div>
 
 	</div>
 
