--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 		</div>
 	</div> -->
 
-	<div>
-
+	<!-- Add the tickets.jpg image -->
+	<div class="screenshots-container">
+		<img src="./screenshots/tickets.jpg">
 	</div>
+
 
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
