--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
 		</div>
 	</div> -->
 
-	<!-- Add the tickets.jpg image -->
-	<div class="screenshots-container">
-		<img src="./screenshots/tickets.jpg">
+	<div class="main">
+
+		<!-- Add the tickets.jpg image -->
+		<div class="screenshots-container">
+			<img src="./screenshots/tickets.jpg">
+		</div>
+
 	</div>
 
 
