--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 		</div>
 	</div> -->
 
-	<div class="main">
+	<div id="main">
 
 		<!-- Add the tickets.jpg image -->
 		<div class="screenshots-container">
-			<img src="./screenshots/tickets.jpg">
+			<!-- <img src="./screenshots/tickets.jpg"> -->
 		</div>
 
 	</div>
@@ -53,9 +53,6 @@
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script src="script.js"></script>
-	<script>
-		// addToHomescreen();
-	</script>
 
 </body>
 </html>
