--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>MooneyGo</title>
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- Favicons -->
