--- a/index.html
+++ b/index.html
@@ -28,26 +28,20 @@
 </head>
 <body>
 
-	<!-- <div class="div1">
-		<div class="corner"></div>
-		<div class="corner"></div>
-		<div class="corner"></div>
-		<div class="corner"></div>
-		<div class="div2">
-			<div class="div3">
-				Prova
-			</div>
-		</div>
-	</div> -->
-
 	<div id="main">
 
 		<!-- Add the tickets.jpg image -->
 		<div class="screenshots-container">
-			<!-- <img src="./screenshots/tickets.jpg"> -->
+			<img src="./screenshots/tickets.jpg">
 		</div>
 
-	</div>
+		<!-- Overlay for the date of the ticket -->
+		<div class="button-mask">
+			<span>Attivato il:</span>
+			<span id="activation-date">???</span>
+		</div>
+		<!-- Click area for the button -->
+		<div id="ticket-button"></div>
 
 
 	<!-- Scripts -->
