--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 			<div class="screenshots-container">
 				<img src="./screenshots/inactive_ticket.jpg">
 			</div>
-			
+			<!-- "Back" button click area -->
+			<div id="back-button"></div>
 		</div>
 		
 
