--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div class="active-ticket-header">
 					<div class="back-button arrow-white"></div>
 					<div class="header-title">Ticket attivo</div>
-					<div></div>
+					<div class="empty-aligner-div"></div>
 				</div>
 				<div class="actual-ticket">
 					<!-- Central div -->
