--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
 								<div class="wave-part"><img src="./images/wave_pattern_double.png"></div>
 								<div class="wave-part"><img src="./images/wave_pattern_double.png"></div>
 								<div class="wave-part"><img src="./images/wave_pattern_double.png"></div>
+								<div class="wave-part"><img src="./images/wave_pattern_double.png"></div>
+								<div class="wave-part"><img src="./images/wave_pattern_double.png"></div>
+								<div class="wave-part"><img src="./images/wave_pattern_double.png"></div>
 							</div>
 						</div>
 						<!-- Other ticket infos -->
