--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 									Codice ticket:
 								</div>
 								<div>
-									3/26982
+									3/<span id="ticket-code">26982</span>
 								</div>
 							</div>
 						</div>
